BUG: Overflow on overlay set to scroll, causing scroll bar to appear even when the modal window is small enough to fit in the overlay.

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .overlay.open {
